--- a/_notebooks/2023-05-16-DS-arrays_lab.ipynb
+++ b/_notebooks/2023-05-16-DS-arrays_lab.ipynb
@@ -735,6 +735,60 @@
     "print(\"─██─▀██▄██▀─▀█▄█▀─██▀█\")\n",
     "print(\"▄██▄▄█▀▀▀─────▀──▄██▄▄█\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m\u001b[2D\n",
+      "                                                               _______\n",
+      "                                                           _/|_[_=_=_=_=_=_] \n",
+      "                                                          (    0         0  )\n",
+      "                                                          =--OO-------OO--=\n",
+      "\u001b[90m\u001b[2D----------------------------------------------------------------\u001b[0m\u001b[2D\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "# ANSI Color Codes\n",
+    "ROAD_COLOR = u\"\\u001B[90m\\u001B[2D\"\n",
+    "CAR_COLOR = u\"\\u001B[33m\\u001B[2D\"\n",
+    "RESET_COLOR = u\"\\u001B[0m\\u001B[2D\"\n",
+    "\n",
+    "def car_print(position):  # print car with colors and leading spaces according to position\n",
+    "    clear_output(wait=True)\n",
+    "    print(RESET_COLOR)\n",
+    "    \n",
+    "    sp = \" \" * position\n",
+    "    print(sp + \"     _______\")\n",
+    "    print(sp + \" _/|_[_=_=_=_=_=_] \")\n",
+    "    print(sp + \"(    0         0  )\")\n",
+    "    print(sp + \"=--OO-------OO--=\")\n",
+    "    print(ROAD_COLOR + \"--\"*32 + RESET_COLOR)\n",
+    "\n",
+    "\n",
+    "def car():  # car function, loop/controller for animation speed and times\n",
+    "    # loop control variables\n",
+    "    start = 0  # start at zero\n",
+    "    distance = 60  # how many times to repeat\n",
+    "    step = 2  # count by 2\n",
+    "\n",
+    "    # loop purpose is to animate car moving on the road\n",
+    "    for position in range(start, distance, step):\n",
+    "        car_print(position)  # call to function with parameter\n",
+    "        time.sleep(.2)\n",
+    "\n",
+    "        \n",
+    "car()  # activate/call car function\n"
+   ]
   }
  ],
  "metadata": {
