--- a/_notebooks/2023-05-16-DS-arrays_lab.ipynb
+++ b/_notebooks/2023-05-16-DS-arrays_lab.ipynb
@@ -789,6 +789,117 @@
     "        \n",
     "car()  # activate/call car function\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3179597497.py, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [4]\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif event_number == 5:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyautogui\n",
+    "import random\n",
+    "import tkinter as tk\n",
+    "x = 1400\n",
+    "cycle = 0\n",
+    "check = 1\n",
+    "idle_num =[1,2,3,4]\n",
+    "sleep_num = [10,11,12,13,15]\n",
+    "walk_left = [6,7]\n",
+    "walk_right = [8,9]\n",
+    "event_number = random.randrange(1,3,1)\n",
+    "impath = 'C:\\\\Users\\\\fx770\\\\Desktop\\\\Project\\\\Buddy\\\\image\\\\'\n",
+    "#transfer random no. to event\n",
+    "def event(cycle,check,event_number,x):\n",
+    " if event_number in idle_num:\n",
+    "  check = 0\n",
+    "  print('idle')\n",
+    "  window.after(400,update,cycle,check,event_number,x) #no. 1,2,3,4 = idle\n",
+    "elif event_number == 5:\n",
+    "  check = 1\n",
+    "  print('from idle to sleep')\n",
+    "  window.after(100,update,cycle,check,event_number,x) #no. 5 = idle to sleep\n",
+    "elif event_number in walk_left:\n",
+    "  check = 4\n",
+    "  print('walking towards left')\n",
+    "  window.after(100,update,cycle,check,event_number,x)#no. 6,7 = walk towards left\n",
+    "elif event_number in walk_right:\n",
+    "  check = 5\n",
+    "  print('walking towards right')\n",
+    "  window.after(100,update,cycle,check,event_number,x)#no 8,9 = walk towards right\n",
+    "elif event_number in sleep_num:\n",
+    "  check  = 2\n",
+    "  print('sleep')\n",
+    "  window.after(1000,update,cycle,check,event_number,x)#no. 10,11,12,13,15 = sleep\n",
+    "elif event_number == 14:\n",
+    "  check = 3\n",
+    "  print('from sleep to idle')\n",
+    "  window.after(100,update,cycle,check,event_number,x)#no. 15 = sleep to idle\n",
+    "#making gif work \n",
+    "def gif_work(cycle,frames,event_number,first_num,last_num):\n",
+    " if cycle < len(frames) -1:\n",
+    "  cycle+=1\n",
+    " else:\n",
+    "  cycle = 0\n",
+    "  event_number = random.randrange(first_num,last_num+1,1)\n",
+    " return cycle,event_number\n",
+    "def update(cycle,check,event_number,x):\n",
+    " #idle\n",
+    " if check ==0:\n",
+    "  frame = idle[cycle]\n",
+    "  cycle ,event_number = gif_work(cycle,idle,event_number,1,9)\n",
+    "  \n",
+    " #idle to sleep\n",
+    " elif check ==1:\n",
+    "  frame = idle_to_sleep[cycle]\n",
+    "  cycle ,event_number = gif_work(cycle,idle_to_sleep,event_number,10,10)\n",
+    "#sleep\n",
+    " elif check == 2:\n",
+    "  frame = sleep[cycle]\n",
+    "  cycle ,event_number = gif_work(cycle,sleep,event_number,10,15)\n",
+    "#sleep to idle\n",
+    " elif check ==3:\n",
+    "  frame = sleep_to_idle[cycle]\n",
+    "  cycle ,event_number = gif_work(cycle,sleep_to_idle,event_number,1,1)\n",
+    "#walk toward left\n",
+    " elif check == 4:\n",
+    "  frame = walk_positive[cycle]\n",
+    "  cycle , event_number = gif_work(cycle,walk_positive,event_number,1,9)\n",
+    "  x -= 3\n",
+    "#walk towards right\n",
+    " elif check == 5:\n",
+    "  frame = walk_negative[cycle]\n",
+    "  cycle , event_number = gif_work(cycle,walk_negative,event_number,1,9)\n",
+    "  x -= -3\n",
+    " window.geometry('100x100+'+str(x)+'+1050')\n",
+    " label.configure(image=frame)\n",
+    " window.after(1,event,cycle,check,event_number,x)\n",
+    "window = tk.Tk()\n",
+    "#call buddy's action gif\n",
+    "idle = [tk.PhotoImage(file=impath+'idle.gif',format = 'gif -index %i' %(i)) for i in range(5)]#idle gif\n",
+    "idle_to_sleep = [tk.PhotoImage(file=impath+'idle_to_sleep.gif',format = 'gif -index %i' %(i)) for i in range(8)]#idle to sleep gif\n",
+    "sleep = [tk.PhotoImage(file=impath+'sleep.gif',format = 'gif -index %i' %(i)) for i in range(3)]#sleep gif\n",
+    "sleep_to_idle = [tk.PhotoImage(file=impath+'sleep_to_idle.gif',format = 'gif -index %i' %(i)) for i in range(8)]#sleep to idle gif\n",
+    "walk_positive = [tk.PhotoImage(file=impath+'walking_positive.gif',format = 'gif -index %i' %(i)) for i in range(8)]#walk to left gif\n",
+    "walk_negative = [tk.PhotoImage(file=impath+'walking_negative.gif',format = 'gif -index %i' %(i)) for i in range(8)]#walk to right gif\n",
+    "#window configuration\n",
+    "window.config(highlightbackground='black')\n",
+    "label = tk.Label(window,bd=0,bg='black')\n",
+    "window.overrideredirect(True)\n",
+    "window.wm_attributes('-transparentcolor','black')\n",
+    "label.pack()\n",
+    "#loop the program\n",
+    "window.after(1,update,cycle,check,event_number,x)\n",
+    "window.mainloop()"
+   ]
   }
  ],
  "metadata": {
